--- a/src/index.css
+++ b/src/index.css
@@ -50,8 +50,9 @@ input[type="text"]{
   height: 40px;
   padding: 10px;
   border-radius: 5px;
-  border: none;
+  border: transparent;
   font-size: 16px;
+  outline: 0;
 }
 .btn-primary, .btn-secondary, .btn-danger{
   display: inline-block;
